# crypto_trading_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py  cli.py  config.py  database.py  logger.py  models.py
src/analysis/: __init__.py  sentiment.py  signal_aggregator.py  technical.py
src/dashboard/: app.py
src/dashboard/static/: app.js  index.html  style.css
src/data/: __init__.py  exchange.py  free_scraper.py  news.py  social.py
src/trading/: __init__.py  executor.py  learner.py  risk_manager.py  strategy.py
